<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_back"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.android.kevin.hospitaldatabase.DoctorsEditorActivity">

    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_name"
            style="@style/CategoryStyle"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/edit_name"
            style="@style/EditorFieldStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_date_of_birth"
            style="@style/CategoryStyle"
            android:text="@string/date_of_birth"/>

        <EditText
            android:id="@+id/edit_date_of_birth"
            style="@style/EditorFieldStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_gender"
            style="@style/CategoryStyle"
            android:text="@string/date_gender"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_specialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_specialization"
            style="@style/CategoryStyle"
            android:text="@string/date_specialization"/>

        <EditText
            android:id="@+id/edit_specialization"
            style="@style/EditorFieldStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_illness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_illness"
            style="@style/CategoryStyle"
            android:text="illness"/>

        <EditText
            android:id="@+id/edit_illness"
            style="@style/EditorFieldStyle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_id_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_id_no"
            style="@style/CategoryStyle"
            android:text="@string/date_id_no"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_ageCategory"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_date_of_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_date_of_report"
            style="@style/CategoryStyle"
            android:text="@string/date_of_report"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_date_of_report"
                style="@style/EditorFieldStyle"/>

            <Button
                android:id="@+id/btn_report"
                android:text="pick date"
                style="@style/dateBtnStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_date_of_retirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_retirement_date"
            style="@style/CategoryStyle"
            android:text="@string/date_of_retirement"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_retirement_date"
                style="@style/EditorFieldStyle"/>
            <Button
                android:id="@+id/btn_retire"
                android:text="pick date"
                style="@style/dateBtnStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:background="@drawable/enter_back"
        android:enabled="false"
        android:textSize="25sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/save_changes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_back"
        android:text="save changes"
        android:enabled="false"
        android:textSize="25sp"
        android:textStyle="italic"/>

</LinearLayout>
