<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_back"
    android:padding="16dp"
    tools:context="com.android.kevin.hospitaldatabase.PatientsEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_name"
                style="@style/CategoryStyle"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/edit_name"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date_of_birth"
                style="@style/CategoryStyle"
                android:text="@string/date_of_birth"/>

            <DatePicker
                android:id="@+id/datePickerPDob"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:theme="@style/Theme.Transparent">

            </DatePicker>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_gender"
                style="@style/CategoryStyle"
                android:text="@string/date_gender"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_specialization"
                style="@style/CategoryStyle"
                android:text="@string/date_specialization"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_wardAllocated"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_ageCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_ageCategory"
                style="@style/CategoryStyle"
                android:text="Age Category"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_age_category"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_illness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_illness"
                style="@style/CategoryStyle"
                android:text="illness"/>

            <EditText
                android:id="@+id/edit_illness"
                style="@style/EditorFieldStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_id_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_id_no"
                style="@style/CategoryStyle"
                android:text="@string/date_id_no"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_doctorAllocated"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_date_of_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date_of_report"
                style="@style/CategoryStyle"
                android:text="@string/date_of_report"/>

            <DatePicker
                android:id="@+id/datePickerPAdmD"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:theme="@style/Theme.Transparent">

            </DatePicker>



        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="SAVE"
            android:background="@drawable/enter_back"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/save_changes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@drawable/enter_back"
            android:text="save changes"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="italic"/>
    </LinearLayout>

</ScrollView>
